--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
-MONGO_URI=mongodb+srv://admin:admin@learnix.j4cgpot.mongodb.net/?retryWrites=true&w=majority&appName=Learnix
-JWT_SECRET=learnix
+# MongoDB connection string (replace <username>, <password>, and <cluster-url>)
+MONGO_URI=mongodb+srv://<username>:<password>@<cluster-url>/learnix?retryWrites=true&w=majority&appName=Learnix
+
+# Secret key for JWT authentication
+JWT_SECRET=<your_jwt_secret>
+
+# Port for backend server
 PORT=5001
